// Copyright (c) Aptos
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

import "google/protobuf/timestamp.proto";

message BlockOutput {
  repeated TransactionOutput transactions = 1;
}

message TransactionOutput {
  TransactionInfoOutput transaction_info_output = 1;
  oneof txn_data {
    BlockMetadataTransactionOutput block_metadata = 2;
    UserTransactionOutput user = 3;
  }

  repeated EventOutput events = 4;
  repeated WriteSetChangeOutput write_set_changes = 5;
}

message TransactionInfoOutput {
  bytes hash = 1;
  string type = 2;
  uint64 version = 3;
  bytes state_root_hash = 4;
  bytes event_root_hash = 5;
  uint64 gas_used = 6;
  bool success = 7;
  uint64 epoch = 8;
  uint64 block_height = 9;
  string vm_status = 10;
  bytes accumulator_root_hash = 11;
  google.protobuf.Timestamp timestamp = 12;
}

message BlockMetadataTransactionOutput {
  bytes hash = 1;
  string id = 2;
  uint64 round = 3;
  repeated bool previous_block_votes_bitmap = 4;
  string proposer = 5;
  repeated uint32 failed_proposer_indices = 6;
  google.protobuf.Timestamp timestamp = 7;
  uint64 epoch = 8;
}

message UserTransactionOutput {
  bytes hash = 1;
  string parent_signature_type = 2;
  string sender = 3;
  uint64 sequence_number = 4;
  uint64 max_gas_amount = 5;
  google.protobuf.Timestamp expiration_timestamp_secs = 6;
  uint64 gas_unit_price = 7;
  google.protobuf.Timestamp timestamp = 8;
  repeated SignatureOutput signatures = 9;
}

message SignatureOutput {
  bytes transaction_hash = 1;
  string signer = 2;
  bool is_sender_primary = 3;
  string signature_type = 4;
  bytes public_key = 5;
  bytes signature = 6;
  uint32 threshold = 7;
  bytes bitmap = 8;
  uint32 multi_agent_index = 9;
  uint32 multi_sig_index = 10;
}

message EventOutput {
  bytes transaction_hash = 1;
  EventKeyOutput key = 2;
  uint64 sequence_number = 3;
  string move_type = 4;
  string data = 5;
}

message EventKeyOutput {
  uint64 creation_number = 1;
  string account_address = 2;
}

message WriteSetChangeOutput {
  bytes transaction_hash = 1;
  bytes hash = 2;
  string type = 3;
  oneof change {
    MoveModuleOutput move_module = 4;
    MoveResourceOutput move_resource = 5;
    TableItemOutput table_item = 6;
  }
}

message MoveModuleOutput {
  string name = 1;
  string address = 2;
  bytes state_key_hash = 3;
  bytes bytecode = 4;
  repeated string friends = 5;
  // this can be better
  repeated string exposed_functions = 6;
  repeated string structs = 7;
  bool is_deleted = 8;
}

message MoveResourceOutput {
  string address = 1;
  string module = 2;
  string name = 3;
  repeated string generic_type_params = 4;
  string data = 5;
  bool is_deleted = 6;
}

message TableItemOutput {
  bytes state_key_hash = 1;
  string handle = 2;
  string key = 3;
  string decoded_key = 4;
  string key_type = 5;
  string decoded_value = 6;
  string value_type = 7;
  bool is_deleted = 8;
}
